syntax = "proto2";

package e2e_noa;

import "affine_transformation.proto";

message HalfPlaneProto {
  optional Vec2dProto start = 1;
  optional Vec2dProto end = 2;
}